--- a/Backend/env.example
+++ b/Backend/env.example
@@ -5,10 +5,10 @@ SUPABASE_JWKS_URL=https://YOUR_PROJECT_REF.supabase.co/auth/v1/.well-known/jwks.
 SUPABASE_SECRET_KEY=sb_secret_...
 SHARE_LINK_BASE_URL=https://example.com
 AASA_TEAM_ID=YOUR_APPLE_AASA_TEAM_ID
-AASA_BUNDLE_ID=com.yourcompany.TherAI
+AASA_BUNDLE_ID=com.yourcompany.TalkToMe
 AASA_PATHS=/link*,/link
 APNS_AUTH_KEY_BASE64=YOUR_APPLE_APNS_AUTH_KEY_BASE64
 APNS_KEY_ID=YOUR_APPLE_APNS_KEY_ID
 APNS_USE_SANDBOX=true
 APNS_TEAM_ID=YOUR_APPLE_APNS_TEAM_ID
-APNS_BUNDLE_ID=com.yourcompany.TherAI
+APNS_BUNDLE_ID=com.yourcompany.TalkToMe
